# cargurus-to-monarch-money

./: .gitignore  CLAUDE.md  LICENSE  README.md  UX_IMPROVEMENTS.md  cargurus_scraper.py  pyproject.toml
cargurus_scraper/: __init__.py  api_client.py  cli.py  exporters.py  parsers.py  processors.py  scraper.py  validators.py
planning/0-initial-conversation-with-claude-web/: planning-conversation.md  sample-api-response.json  spec.md
planning/1-implementation-plan-generated-by-claude-code/: implementation_plan.md
tests/: __init__.py  test_api_client.py  test_cli.py  test_exporters.py  test_parsers.py  test_processors.py  test_validators.py
