[project]
name = "cargurus-scraper"
version = "0.1.0"
description = "CarGurus to Monarch Money vehicle value scraper"
authors = [
    {name = "User"}
]
dependencies = [
    "requests>=2.31.0",
]
requires-python = ">=3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 120
