[project]
name = "cargurus-scraper"
version = "0.1.0"
description = "CarGurus to Monarch Money vehicle value scraper"
authors = [
    {name = "Habib Affinnih"}
]
dependencies = [
    "requests>=2.31.0",
]
requires-python = ">=3.8"

[project.scripts]
cargurus-scraper = "cargurus_scraper.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 120

[dependency-groups]
dev = [
    "ruff>=0.12.7",
]
test = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
    "freezegun>=1.4.0",
]
